--- a/package.json
+++ b/package.json
@@ -1,15 +1,32 @@
 {
-  "name": "react-admin",
+  "name": "react-materialui-admin",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fullcalendar/core": "^6.1.8",
+    "@fullcalendar/daygrid": "^6.1.8",
+    "@fullcalendar/list": "^6.1.8",
+    "@fullcalendar/timegrid": "^6.1.8",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.5",
+    "@mui/x-data-grid": "^6.8.0",
+    "@nivo/bar": "^0.83.0",
+    "@nivo/core": "^0.83.0",
+    "@nivo/geo": "^0.83.0",
+    "@nivo/pie": "^0.83.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "formik": "^2.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-pro-sidebar": "^1.1.0-alpha.1",
+    "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,5 +51,26 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MalikBilalKhaliq/React-MaterialUI-Admin.git"
+  },
+  "keywords": [
+    "react",
+    "materialui",
+    "niva",
+    "fullcalendar",
+    "fermik",
+    "sidebar",
+    "yup"
+  ],
+  "author": "Bilal Khaliq",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/MalikBilalKhaliq/React-MaterialUI-Admin/issues"
+  },
+  "homepage": "https://github.com/MalikBilalKhaliq/React-MaterialUI-Admin#readme"
 }
